@@ -7,19 +7,18 @@ import android.view.ViewGroup;
 import android.widget.ArrayAdapter;
 import android.widget.AutoCompleteTextView;
 
-import androidx.annotation.NonNull;
-import androidx.annotation.Nullable;
 import androidx.fragment.app.Fragment;
 
 import com.example.app_ban_hang.Model.product;
-import com.example.app_ban_hang.database.productDao;
+import com.example.app_ban_hang.database.ProductDao;
 import com.example.app_ban_hang.R;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Fragment_Search extends Fragment {
     private AutoCompleteTextView search;
-    private productDao productDao;
+    private ProductDao productDao;
 
     public Fragment_Search() {
     }
@@ -28,12 +27,12 @@ public class Fragment_Search extends Fragment {
     @Override
     public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
         View view = inflater.inflate(R.layout.fragment__search, container, false);
-        productDao = new productDao(getContext());
+        productDao = new ProductDao(getContext());
         search = view.findViewById(R.id.search);
         List<product> productList = productDao.getAll();
         List<String> productNames = productList.stream()
                 .map(product::getProduct_name)
-                .toList();
+                .collect(Collectors.toList());
         // Adapter cho AutoCompleteTextView
         ArrayAdapter<String> adapter = new ArrayAdapter<>(
                 getContext(),
